test/input/invalid/const.js
function f() {
    const a;
}

function g() {
    "use strict";
    const a;
}
